Setup of no-ui-slider inputs: size and orientation

--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -1,1 +1,4 @@
-<no-ui-slider></no-ui-slider>
+<no-ui-slider orientation="horizontal" size="300"></no-ui-slider>
+<no-ui-slider orientation="horizontal" size="10"></no-ui-slider>
+<no-ui-slider orientation="vertical" size="50"></no-ui-slider>
+<no-ui-slider orientation="vertical"></no-ui-slider>
