--- a/app/components/app/app.html
+++ b/app/components/app/app.html
@@ -2,6 +2,7 @@
   <nav>
     <a [routerLink]="['/Home']">Home</a>
     <a [routerLink]="['/About']">About</a>
+    <a [routerLink]="['/Gridcomponent']">Gridcomponent</a>
   </nav>
 
   <router-outlet></router-outlet>
