Use multiple grid

--- a/app/components/grid/grid.html
+++ b/app/components/grid/grid.html
@@ -8,9 +8,8 @@
   </div>
 
   <div id="section">
-    <h1>Bla</h1>
-    <p>asdfasdfasdfasdf.</p>
-    <p>asdfasdfsdf.</p>
+      <gridcomponent name='bla'></gridcomponent>
+      <gridcomponent name='blo'></gridcomponent>        
   </div>
 
   <div id="footer">
